--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,7 +2,7 @@ name: Deploy Docs
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature/add-tutorial-to-pages ]
   workflow_dispatch:
 
 permissions:
